kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-deployment
  namespace: onlineeventbooking-afsah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - name: event-service
        image: 22i1046/event-service:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - event-db
          initialDelaySeconds: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: onlineeventbooking-afsah
spec:
  selector:
    app: event-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
