kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service-deployment
  namespace: onlineeventbooking-afsah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: 22i1046/notification-service:latest
        ports:
        - containerPort: 5002
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: onlineeventbooking-afsah
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5002
  type: ClusterIP
