kubernetes/deployment-service-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-deployment
  namespace: onlineeventbooking-afsah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
      - name: user-db
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: onlineeventbooking-afsah
spec:
  selector:
    app: user-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-db-deployment
  namespace: onlineeventbooking-afsah
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-db
  template:
    metadata:
      labels:
        app: event-db
    spec:
      containers:
      - name: event-db
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-event
  namespace: onlineeventbooking-afsah
spec:
  selector:
    app: event-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
