kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: onlineeventbooking-afsah
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 22i1046/user-service:latest
        ports:
        - containerPort: 8001
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbooking-afsah
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
  type: ClusterIP
