kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-booking-ingress
  namespace: onlineeventbooking-afsah
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: eventbooking.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/users-service
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/events-service
        pathType: Prefix
        backend:
          service:
            name: event-service
            port:
              number: 80
      - path: /api/bookings-service
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /api/notifications-service
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80
